[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/images/characters/ship.png" type="Texture" id=1]
[ext_resource path="res://src/Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/Characters/Player/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/Characters/Player/States/Walk.gd" type="Script" id=5]
[ext_resource path="res://src/Characters/Player/States/Move.gd" type="Script" id=6]
[ext_resource path="res://src/Characters/Player/States/Grab.gd" type="Script" id=7]
[ext_resource path="res://src/Characters/Player/States/Drop.gd" type="Script" id=8]
[ext_resource path="res://src/Characters/Player/States/Fish.gd" type="Script" id=10]
[ext_resource path="res://src/Characters/Player/Fishing.gd" type="Script" id=11]
[ext_resource path="res://src/Characters/Player/States/Talk.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.64699, 3.57263 )

[sub_resource type="CircleShape2D" id=3]
radius = 3.06255

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.19548, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.239216, 0.431373, 0.439216, 1, 0.364706, 0.870588, 0.529412, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2.20734, 2.00338 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 0.5 )

[node name="Player" type="KinematicBody2D"]
z_index = 5
collision_mask = 4
script = ExtResource( 2 )
dialog_color = Color( 0.729412, 0.380392, 0.337255, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
speed = 1.0

[node name="Grab" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Drop" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Fish" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Talk" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="PlayerArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource( 3 )

[node name="FishSplash" type="CPUParticles2D" parent="."]
position = Vector2( 8.52321, -2.31758 )
z_index = -1
emitting = false
amount = 30
lifetime = 0.7
one_shot = true
speed_scale = 1.3
explosiveness = 0.69
randomness = 0.28
lifetime_randomness = 0.24
local_coords = false
emission_shape = 4
emission_points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
emission_normals = PoolVector2Array( -6, -38, 6, -35, -6, -12, 6, -18, -6, -26, -6, -24 )
emission_colors = PoolColorArray(  )
spread = 35.0
gravity = Vector2( 0, 100 )
scale_amount = 0.8
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="FishingSpot" type="ColorRect" parent="."]
visible = false
margin_left = 7.0
margin_top = 1.0
margin_right = 11.0
margin_bottom = 5.0
color = Color( 1, 1, 0.921569, 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishingArea" type="Area2D" parent="FishingSpot"]
position = Vector2( 7.35245, -0.858543 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishingSpot/FishingArea"]
position = Vector2( -5.30872, 2.85854 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="FishingSpot"]
wait_time = 0.4

[node name="FootArea" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootArea"]
position = Vector2( 0.5, 4.12547 )
shape = SubResource( 7 )

[node name="Splash_L" type="CPUParticles2D" parent="."]
position = Vector2( -0.813303, 0 )
z_index = -1
emitting = false
amount = 12
lifetime = 0.6
one_shot = true
speed_scale = 1.3
explosiveness = 0.72
randomness = 0.54
lifetime_randomness = 0.55
local_coords = false
emission_shape = 4
emission_points = PoolVector2Array( 0, 5.6, 2, 5.6, -2, 5.6, 0, 5.6 )
emission_normals = PoolVector2Array( -12, -32, 6, -20, -8, -12, 11, -18 )
emission_colors = PoolColorArray(  )
spread = 35.0
gravity = Vector2( 0, 100 )
scale_amount = 0.8
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="Splash_R" type="CPUParticles2D" parent="."]
position = Vector2( 0.739365, 0 )
z_index = -1
emitting = false
amount = 12
lifetime = 0.6
one_shot = true
speed_scale = 1.3
explosiveness = 0.72
randomness = 0.54
lifetime_randomness = 0.55
local_coords = false
emission_shape = 4
emission_points = PoolVector2Array( 0, 5.6, 2, 5.6, -2, 5.6, 0, 5.6 )
emission_normals = PoolVector2Array( -12, -32, 6, -20, -8, -12, 11, -18 )
emission_colors = PoolColorArray(  )
spread = 35.0
gravity = Vector2( 0, 100 )
scale_amount = 0.8
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )
